refactor, revised button callbacks

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 
       <link rel="stylesheet" href="style.css">
       <script src="./src/index.js"></script>
-      <script src="./src/client.js"></script>
+      <!-- <script src="./src/client.js"></script>
       <script src="./src/actions.js"></script>
-      <script src="./src/pet.js"></script>
+      <script src="./src/pet.js"></script> -->
     <title>Pomagotchi!</title>
 
     </head>
