--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
       <link rel="stylesheet" href="style.css">
+      
+      <script src="./src/game.js"></script>
+      <script src="./src/pet.js"></script> 
       <script src="./src/index.js"></script>
-      <!-- <script src="./src/client.js"></script>
-      <script src="./src/actions.js"></script>
-      <script src="./src/pet.js"></script> -->
-    <title>Pomagotchi!</title>
+   <title>Pomagotchi!</title>
 
-    </head>
+   </head>
 
-<body>
+   <body>
 
 
-  <div class="container">
-  <h1>Pomagotchi!</h1>
-    <div class="card-columns d-flex justify-content-center" id="main">
+     <div class="container">
+        <h1>Pomagotchi!</h1>
+        <div class="card-columns d-flex justify-content-center" id="main">
+      </div>
+     </div>
 
-    </div>
-  </div>
+    <br><br><br><br><br>
 
-  <br><br><br><br><br>
-
-<center>
-<small style="text-align: center;">&copy; 2020 <strong>Christopher Dent</strong></small>
-</center>
+  <center>
+    <small style="text-align: center;">&copy; 2020 <strong>Christopher Dent</strong></small>
+  </center>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -35,7 +33,5 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 
-</body>
-
-
+  </body>
 </html>
